# fastmda

./: .readthedocs.yaml  FastMDAExceptions.py  Klaus6AxisController.py  LICENSE  README.md  dev_run_server.cmd  object_examples.py  pyproject.toml  requirements.txt  setup.cfg
devices/: Klaus6AxisController.py
docs/: classes_scheme.pptx  conf.py  example_config.json  fastmda.device_types.example_device.rst  fastmda.device_types.rst  fastmda.measurements.rst  fastmda.routers.rst  fastmda.rst  index.rst  modules.rst  objects.md
documentation/: objects.md
src/fastmda/: crud.py  exceptions.py  globals.py  main.py  models.py  objects.py  schemas.py
src/fastmda/device_types/: example_device.py
src/fastmda/device_types/example_device/: example_device.py
src/fastmda/devices/: example_device.py
src/fastmda/routers/: actuators.py  detectors.py  devices.py
tests/: test_devices.py
