[metadata]
name = fastmda
version = 0.0.1
description = Multi dimensional acquisition server with with OpenAPI interface
author = Hampus Näsström
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    fastmda
install_requires =
    fastapi>=0.70.0
    uvicorn>=0.15.0
    pydantic>=1.8.2
    setuptools>=58.5.3
    SQLAlchemy>=1.4.26
    xarray>=0.20.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no